# dds26-17

./: .gitattributes  .gitignore  KNOWN_ISSUES.md  PROJECT_STATEMENT.md  README.md  cluster-init.sh  cluster-migration-plan.md  cluster-node-entrypoint.sh  contributions.txt  deploy-charts-cluster.sh  deploy-charts-minikube.sh  docker-compose-6cpu.yml  docker-compose-large.yml  docker-compose-medium.yml  docker-compose-small.yml  docker-compose.yml  gateway_nginx.conf  haproxy-6cpu.cfg  haproxy-large.cfg  haproxy-medium.cfg  haproxy-small.cfg  haproxy.cfg  minikube-deploy.sh  minikube-teardown.sh  pytest.ini  requirements.txt  sentinel-entrypoint.sh  sentinel.conf
checkout/: Dockerfile  app.py
common/: __init__.py  config.py  consumer.py  db.py  dlq.py  fault_injection.py  logging.py  nats_transport.py  result.py  tracing.py
docs/: CONSISTENCY_REPORT.md  CRITICAL_ASSESSMENT.md  PROJECT_OVERVIEW.md  architectural_compliance_report.md  benchmark_chart.py  tla_consistency_fault_tolerance.md
env/: checkout_redis.env  event_bus.env  gateway.env  order_redis.env  payment_redis.env  stock_redis.env
helm-config/: nginx-helm-values.yaml  redis-helm-values.yaml
k8s/: gateway.yaml  ingress-service.yaml  nats.yaml  order-app.yaml  payment-app.yaml  stock-app.yaml
lua/: order_add_item.lua  order_lib.lua  order_load_and_claim.lua  payment_2pc_abort.lua  payment_2pc_commit.lua  payment_2pc_prepare.lua  payment_add_direct.lua  (+12 more)
orchestrator/: README.md  __init__.py  core.py  definition.py  executor.py  leader.py  metrics.py  pyproject.toml  recovery.py  transport.py  wal.py
(+124 files in other folders)
