[project]
name = "wdm-orchestrator"
version = "1.0.0"
description = "Hybrid 2PC/Saga orchestrator for distributed microservices"
requires-python = ">=3.11"
dependencies = [
    "redis[hiredis]>=5.0",
    "structlog>=23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]
